@@ -2,6 +2,8 @@ UNRELEASED:
 * If listening port for signer is not set in conf file, the default value "15354" is used.
 * Enforce and signconf tasks are now scheduled individually per zone. Resign
   per policy.
+* OpenDNSSEC-839: update all no longer deletes zones or policies. Policy import
+  now has a --remove-missing-policies option. (thanks David Peall)
 * zone delete removes tasks associated with zone from queue.
 * Show help for ods-enforcer-db-setup
 * In the kasp file, KSK/ZSK section, the algorithm length must be set now.
